--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: zcunsoft/clklog-frontend
+          images: zcunsoft/accesslog-ui
           tags: |
             type=schedule
             type=semver,pattern={{version}}
@@ -46,9 +46,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          # TODO: Use Secrets when Public
-          username: zcunsoft
-          password: dckr_pat_2eAU1fw60YppPltWJ7-tVJXma9o
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
@@ -64,12 +63,11 @@ jobs:
       - name: Login to Aliyun Docker Registry
         uses: docker/login-action@v2
         with:
-          # TODO: Use Secrets when Public
-          registry: registry.cn-shanghai.aliyuncs.com
-          username: clklog.githubci@zcunsoft
-          password: R7w!9F6zlqt2
+          registry: ${{ secrets.ALIYUN_REGISTRY }}
+          username: ${{ secrets.ALIYUN_REGISTRY_USERNAME }}
+          password: ${{ secrets.ALIYUN_REGISTRY_PASSWORD }}
       - name: Push image to Aliyun Docker Registry
         run: |
           docker buildx imagetools create \
-            --tag registry.cn-shanghai.aliyuncs.com/zcunsoft/clklog_frontend:${{ steps.set-tag.outputs.tag }} \
-            zcunsoft/clklog-frontend:${{ steps.set-tag.outputs.tag }}
+            --tag registry.cn-shanghai.aliyuncs.com/clklog/access_api:${{ steps.set-tag.outputs.tag }} \
+            zcunsoft/accesslog-ui:${{ steps.set-tag.outputs.tag }}
